fixed the scrollbar

--- a/apps/workmanager/src/app/header/preview/quick-find/qf-modal/qf-modal.component.scss
+++ b/apps/workmanager/src/app/header/preview/quick-find/qf-modal/qf-modal.component.scss
@@ -4,3 +4,8 @@
   row-gap: 0.5rem;
   padding: 2rem 1.5rem;
 }
+
+.search-results {
+  overflow: auto;
+  margin: 0.125rem 0 1.5rem 0;
+}
