--- a/apps/workmanager/src/styles.scss
+++ b/apps/workmanager/src/styles.scss
@@ -56,6 +56,19 @@ body {
   'opsz' 24
 }
 
-.overflow-auto {
-  overflow: auto;
+::-webkit-scrollbar {
+  width: 8px;
+  /* Width of the vertical scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #fff;
+  /* Background color of the scrollbar track */
+  // border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #9695A6;
+  /* Color of the scrollbar thumb */
+  border-radius: 4px;
 }
